# cc

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  amazon_cookiegen.py  amazon_login.py  amazon_signup.py  app.py  auto_sender.py  core.py  requirements.txt
backend/: .env.example  pyproject.toml
backend/app/: config.py  errors.py  main.py
backend/app/api/: admin.py  auth.py  batches.py  cookies.py  credentials.py  deps.py  gates.py  health.py  history.py  keys.py  observability.py  public.py  sessions.py  targets.py  (+2 more)
backend/migrations/: env.py
backend/scripts/: attribution_volume_test.py  bootstrap_owner.py  enum_commands.py  load_test_gmin.py  seed_user.py  telegram_auth.py
backend/tests/: conftest.py  test_account_guard.py  test_admin_gates.py  test_admin_interval.py  test_admin_lifecycle.py  test_admin_users.py  test_admission.py  test_amazon_rotation.py  test_antispam.py  test_attribution.py  test_auth.py  test_awaiting_reply.py  test_batch_controls.py  test_batches.py  test_clear_declined.py  test_cookies.py  test_credentials.py  test_display_transform.py  test_gate_categories.py  test_gate_display_value.py  test_gift_keys.py  test_history.py  test_history_display_parity.py  test_key_purge.py  test_live_forward.py  test_observability.py  test_password_reset.py  test_plan_credits.py  test_plan_expiry.py  test_plans_catalog.py  test_prelaunch.py  test_public.py  test_reconciler.py  test_redact.py  test_register.py  test_scheduler.py  test_send_hardening.py  test_sessions.py  test_special_mode_capture.py  test_support_contacts.py  (+4 more)
(+365 files in other folders)
