[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-backend"
version = "0.1.0"
description = "CC backend — FastAPI + SQLAlchemy async skeleton"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136,<0.137",
    "uvicorn[standard]>=0.34,<0.40",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<2.0",
    "argon2-cffi>=23.1,<26.0",
    "pydantic-settings>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9,<0.16",
    "mypy>=1.14,<2.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<2.0",
    "httpx>=0.28,<0.29",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
# Alembic-generated revision files are machine-written — don't lint their style.
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["app"]
